style.css
@font-face {
    font-family: retro;
    src: url(retro4.ttf);
  }

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: #2F5755;
}

.gameAndMenu{
    display: flex;
    align-items: center;
    gap: 30px;
}

.menu{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 600px;
    width: auto;
    padding: 15px;
    border: 1px solid #54C6BE;
    box-shadow: 5px 5px 0px black;
    
}

.colorPickers{
    display: flex;
    flex-direction: column;
}

.box {
    flex: 1;
}

.borderToggle {
    border: solid grey 1px;
}

button{
    border: 3px solid #F65C51;
    padding: 7px;
    background-color: #F7B15C;
    box-shadow: 8px 8px 0px black;
}

.buttons:hover {
    cursor: pointer;
}

.colorPicker {
    display: flex;
    align-items: center;
    gap: 10px;
}

.container {
    background-color: #F7B15C;
    display: flex;
    flex-direction: row;
    width: 600px;
    height: 600px;
    border: 3px solid #F65C51;
    border-radius: 9px;
    padding: 5px;
    box-shadow: 13px 13px 0px black;
}

.column {
    flex: 1;
    display: flex;
    flex-direction: column;
}


h1{
    -webkit-text-stroke: 0px red;
    font-family: retro;
    font-size: 45px;
    color: #F7B15C;
    text-shadow: -1px 1px 0px black, -2px 2px 0px #F65C51, -4px 3px 0px #F65C51, -4px 4px 0px black, -6px 6px 0px black, -8px 8px 0px black, -9px 9px 0px black;
  -webkit-background-clip: text;
     -moz-background-clip: text;
          background-clip: text;
    
}

p{
    color: #F7B15C;
    text-shadow: 1px 1px 0px #F65C51, 4px 4px 0px black, 5px 5px 0px black, 6px 6px 0px black;
    font-size: 20px;
}

.slider{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.slider,
.colorPickers{
    color: #F7B15C;
    text-shadow: 1px 1px 0px #F65C51, 4px 4px 0px black, 5px 5px 0px black, 6px 6px 0px black;
}

.icon{
    height: 30px;
    width: auto;
    margin-bottom: -9px;
    padding: 0px 8px 0px 8px;
}

.footer{
    flex: 1;
    margin-top: auto;
    display: flex;
    align-items: flex-end;
    padding: 8px;
    color: #F7B15C;
    text-shadow: 1px 1px 0px #F65C51, 4px 4px 0px black, 5px 5px 0px black, 6px 6px 0px black;
    font-size: 16px;
}

